# heartwood-memory

./: .gitignore  .ignore  .mcp.json  .mcp.json.example  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements-postgres.txt  server.json
.github/: dependabot.yml
bench/: DESIGN.md  README.md  run_benchmark.py
bench/results/: heartwood-0.2.5-baseline.json
bench/trust_benchmark/: __init__.py  claim_scan.py  fixtures.py  model.py  probes.py
bench/trust_benchmark/adapters/: __init__.py  base.py  heartwood_adapter.py  stubs.py
docs/: README.md  platform-support.md
docs/api/: continuity.md  python-api.md  recall-visibility-and-retirement.md  strict-mode-and-audit-anchor-quickstart.md
docs/integrations/: api-ergonomics.md  codex-AGENTS.md.template  codex-quickstart.md  customer-implementation-guide.md  macos-launchd.md  markdown-import.md  mcp-quickstart.md  onboarding-guide.md  rotation-receipt-prototype.md  vscode-copilot.md  warm-recall.md
docs/migration/: postgres-sqlite-migration-guide.md
docs/release/: python-package-release.md
docs/security/: key-custody.md  multi-agent-identity.md
examples/: trust_demo.py
examples/regulated-support/: COMPLIANCE_REPORT.md  README.md  agent.py  audit.py  corpus.py  run_demo.py
examples/rotation-continuity/: ADMIN-SECURITY.md  README.md  check_vscode_mcp.py  demo_models.py  mcp_server.py  routes.py  run_demo.py
examples/rotation-receipt-prototype/: run_prototype.py
examples/rotation-receipt-prototype/fixtures/: toy-eval-suite.json
examples/safe-recall-client/: README.md  safe_recall_client.py
heartwood/: README.md  __init__.py  anchors.py  audit.py  chunking.py  cli.py  client.py  consolidation.py  contextual_ingest.py  egress.py  envelope.py  erasure.py  ergonomics.py  faithfulness.py  index.py  key_custody.py  key_lifecycle.py  model_cache.py  models.py  policy.py  provenance.py  recall_service.py  retrieval.py  review.py  store.py  strict.py  typed_ranking.py
heartwood/adapters/: README.md  __init__.py  hermes.py  mcp_server.py  memory_tool.py  openclaw.py
heartwood/continuity/: __init__.py  schema.py  service.py
heartwood/importers/: __init__.py  edges.py  markdown.py
scripts/: build_release.py  check.sh  check_version.py  install-hooks.sh
tests/: smoke_test.py  test_anchors.py  test_audited_visibility_verbs.py  test_build_release.py  test_bulk_api.py  test_chunking.py  test_codex_recipe.py  test_consolidation.py  test_contextual_ingest.py  test_continuity.py  test_edges_importer.py  test_hermes_integration.py  test_index.py  test_inheritance.py  test_key_custody.py  test_markdown_import_classification.py  test_markdown_importer.py  test_mcp_hardening.py  test_mcp_template.py  test_memory_tool.py  test_model_cache.py  test_provenance.py  test_recall_dedup.py  test_recall_filters.py  test_recall_validity.py  test_review_workflow.py  test_rotation_continuity_demo.py  test_rotation_receipt_prototype.py  test_strict_mode.py  test_trust_benchmark.py  test_trust_controls.py  test_typed_ranking.py  test_version_consistency.py  test_warm_recall.py
